--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,9 +1,16 @@
 /* add css module styles here (optional) */
 
-.test {
-  margin: 2em;
-  padding: 0.5em;
-  border: 2px solid #000;
-  font-size: 2em;
-  text-align: center;
+.visualFlow {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.designerSvg {
+  overflow: hidden;
+}
+
+.designerSvgGroup {
+
 }
